make the optitrack enabled by default.

--- a/cfg/MocapOptitrack.cfg
+++ b/cfg/MocapOptitrack.cfg
@@ -2,7 +2,7 @@
 from dynamic_reconfigure.parameter_generator_catkin import *
 
 gen = ParameterGenerator()
-gen.add("enable_optitrack", bool_t, 1, "Switch node on/off", False)
+gen.add("enable_optitrack", bool_t, 1, "Switch node on/off", True)
 gen.add("command_port", int_t, 1, "Command port", 0, 0, 10000)
 gen.add("data_port", int_t, 1, "Data port", 0, 0, 10000)
 gen.add("multicast_address", str_t, 1, "Multicast IP address", '')
